[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/ui/tex_bar.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://assets/bots/sfx_Bot_Bump.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/bots/sfx_Bot_Charge_Attack.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/bots/sfx_Bot_Charge_Attack_Hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/bots/sfx_Bot_Shield_Damage.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/bots/sfx_Bot_Health_Damage.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/bots/sfx_Bot_Transform.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/bots/sfx_Bot_discharge_parry.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/bots/sfx_Bot_teleport.wav" type="AudioStream" id=13]
[ext_resource path="res://scenes/bots/_base/_BaseBot.gd" type="Script" id=15]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
bounce = 0.7

[sub_resource type="Animation" id=2]
resource_name = "discharge_parry"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "trail"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.530612, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0.972549, 0.0627451, 0.0627451, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 750.0
initial_velocity_random = 0.9
angular_velocity = 1000.0
angular_velocity_random = 0.9
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_random = 0.9
color_ramp = SubResource( 5 )

[node name="Bot" type="RigidBody2D"]
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 15 )

[node name="Legs" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Legs"]

[node name="Leg0" type="Position2D" parent="Legs"]

[node name="Leg1" type="Position2D" parent="Legs"]

[node name="Leg2" type="Position2D" parent="Legs"]

[node name="Body" type="Node2D" parent="."]

[node name="Outline" type="Polygon2D" parent="Body"]

[node name="Texture" type="Polygon2D" parent="Body"]
texture = ExtResource( 3 )
polygon = PoolVector2Array( 32, 1.90735e-06, 30.912, 8.288, 27.712, 16, 22.624, 22.624, 16, 27.712, 8.28799, 30.912, -3.8147e-06, 32, -8.288, 30.912, -16, 27.712, -22.624, 22.624, -27.712, 16, -30.912, 8.288, -32, 1.90735e-06, -30.912, -8.288, -27.712, -16, -22.624, -22.624, -16, -27.712, -8.288, -30.912, -3.8147e-06, -32, 8.28799, -30.912, 16, -27.712, 22.624, -22.624, 27.712, -16, 30.912, -8.288, 16, 26, 6, 29, -6, 29, -16, 26, 24, 18, 14, 22, -3.8147e-06, 24, -14, 22, -24, 18, -28, 10, -22, 12, -8, 14, 8, 14, 22, 12, 28, 10, -30, 1.90735e-06, -26, 1.90735e-06, -16, 1.90735e-06, -3.8147e-06, 1.90735e-06, 16, 1.90735e-06, 26, 1.90735e-06, 30, 1.90735e-06, 28, -10, 22, -12, 8, -14, -8, -14, -22, -12, -28, -10, 24, -18, 14, -22, -3.8147e-06, -24, -14, -22, -24, -18, -16, -26, -6, -29, 6, -29, 16, -26 )
uv = PoolVector2Array( 72, 32, 67, 40, 62, 48, 57, 56, 52, 64, 42, 64, 32, 64, 22, 64, 12, 64, 6.99999, 56, 1.99999, 48, -3.00001, 40, -8.00001, 32, -3.00001, 24, 1.99999, 16, 6.99999, 8, 12, 0, 22, 0, 32, 0, 42, 0, 52, 0, 57, 8, 62, 16, 67, 24, 47, 56, 37, 56, 27, 56, 17, 56, 52, 48, 42, 48, 32, 48, 22, 48, 12, 48, 6.99998, 40, 17, 40, 27, 40, 37, 40, 47, 40, 57, 40, 1.99998, 32, 12, 32, 22, 32, 32, 32, 42, 32, 52, 32, 62, 32, 57, 24, 47, 24, 37, 24, 27, 24, 17, 24, 6.99998, 24, 52, 16, 42, 16, 32, 16, 22, 16, 12, 16, 17, 8, 27, 8, 37, 8, 47, 8 )
polygons = [ PoolIntArray( 9, 27, 8 ), PoolIntArray( 27, 7, 8 ), PoolIntArray( 27, 26, 7 ), PoolIntArray( 26, 6, 7 ), PoolIntArray( 26, 25, 6 ), PoolIntArray( 25, 5, 6 ), PoolIntArray( 25, 24, 5 ), PoolIntArray( 24, 4, 5 ), PoolIntArray( 24, 3, 4 ), PoolIntArray( 10, 9, 32 ), PoolIntArray( 32, 9, 27 ), PoolIntArray( 32, 31, 27 ), PoolIntArray( 26, 31, 27 ), PoolIntArray( 26, 31, 30 ), PoolIntArray( 26, 25, 30 ), PoolIntArray( 25, 29, 30 ), PoolIntArray( 25, 29, 24 ), PoolIntArray( 24, 28, 29 ), PoolIntArray( 24, 3, 28 ), PoolIntArray( 28, 2, 3 ), PoolIntArray( 10, 11, 33 ), PoolIntArray( 10, 32, 33 ), PoolIntArray( 33, 34, 32 ), PoolIntArray( 34, 31, 32 ), PoolIntArray( 34, 35, 31 ), PoolIntArray( 35, 30, 31 ), PoolIntArray( 35, 36, 30 ), PoolIntArray( 36, 29, 30 ), PoolIntArray( 36, 37, 29 ), PoolIntArray( 37, 28, 29 ), PoolIntArray( 37, 38, 28 ), PoolIntArray( 38, 2, 28 ), PoolIntArray( 38, 1, 2 ), PoolIntArray( 0, 45, 1 ), PoolIntArray( 0, 23, 45 ), PoolIntArray( 38, 45, 1 ), PoolIntArray( 38, 44, 37 ), PoolIntArray( 38, 45, 44 ), PoolIntArray( 46, 44, 45 ), PoolIntArray( 46, 23, 45 ), PoolIntArray( 46, 47, 44 ), PoolIntArray( 43, 44, 47 ), PoolIntArray( 43, 47, 48 ), PoolIntArray( 43, 48, 42 ), PoolIntArray( 43, 36, 37 ), PoolIntArray( 43, 44, 37 ), PoolIntArray( 43, 36, 42 ), PoolIntArray( 42, 48, 49 ), PoolIntArray( 42, 49, 41 ), PoolIntArray( 42, 41, 35 ), PoolIntArray( 42, 35, 36 ), PoolIntArray( 41, 49, 50 ), PoolIntArray( 41, 50, 40 ), PoolIntArray( 41, 34, 35 ), PoolIntArray( 41, 40, 34 ), PoolIntArray( 40, 51, 50 ), PoolIntArray( 40, 39, 51 ), PoolIntArray( 40, 34, 33 ), PoolIntArray( 40, 33, 39 ), PoolIntArray( 12, 13, 39 ), PoolIntArray( 13, 51, 39 ), PoolIntArray( 12, 11, 39 ), PoolIntArray( 11, 33, 39 ), PoolIntArray( 13, 14, 51 ), PoolIntArray( 14, 56, 51 ), PoolIntArray( 23, 22, 46 ), PoolIntArray( 22, 52, 46 ), PoolIntArray( 52, 47, 46 ), PoolIntArray( 52, 53, 47 ), PoolIntArray( 53, 48, 47 ), PoolIntArray( 48, 54, 53 ), PoolIntArray( 54, 48, 49 ), PoolIntArray( 54, 55, 49 ), PoolIntArray( 55, 50, 49 ), PoolIntArray( 55, 56, 50 ), PoolIntArray( 56, 51, 50 ), PoolIntArray( 15, 16, 57 ), PoolIntArray( 15, 14, 56 ), PoolIntArray( 15, 57, 56 ), PoolIntArray( 57, 55, 56 ), PoolIntArray( 57, 58, 55 ), PoolIntArray( 57, 17, 16 ), PoolIntArray( 17, 58, 57 ), PoolIntArray( 58, 54, 55 ), PoolIntArray( 58, 17, 18 ), PoolIntArray( 54, 59, 58 ), PoolIntArray( 18, 59, 58 ), PoolIntArray( 59, 53, 54 ), PoolIntArray( 59, 19, 18 ), PoolIntArray( 59, 60, 53 ), PoolIntArray( 59, 60, 19 ), PoolIntArray( 60, 20, 19 ), PoolIntArray( 60, 21, 20 ), PoolIntArray( 60, 52, 53 ), PoolIntArray( 60, 21, 52 ), PoolIntArray( 22, 21, 52 ) ]
internal_vertex_count = 37

[node name="WeaponHatch" type="Polygon2D" parent="Body"]
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[node name="ChargeEffect" type="Polygon2D" parent="Body"]
modulate = Color( 1, 1, 1, 0 )

[node name="Anim" type="AnimationPlayer" parent="Body/ChargeEffect"]
anims/discharge_parry = SubResource( 2 )
anims/trail = SubResource( 3 )

[node name="SwitchTween" type="Tween" parent="Body"]

[node name="BodyTween" type="Tween" parent="Body"]

[node name="Bars" type="Node2D" parent="."]
z_index = 5

[node name="Shield" type="TextureProgress" parent="Bars"]
modulate = Color( 0.292969, 1, 0.968223, 1 )
margin_bottom = 5.0
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="Bars"]
modulate = Color( 1, 0.13, 0.13, 1 )
margin_bottom = 5.0
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Node2D" parent="."]

[node name="ChargeCooldown" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="ChargeTrail" type="Timer" parent="Timers"]
wait_time = 0.01

[node name="ChargeEffectDelay" type="Timer" parent="Timers"]
wait_time = 0.05
one_shot = true

[node name="ShieldRecoveryTimer" type="Timer" parent="Timers"]
wait_time = 0.25
autostart = true

[node name="ExplodeDelay" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Stun" type="Timer" parent="Timers"]
one_shot = true

[node name="DischargeParry" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Resume" type="Timer" parent="Timers"]

[node name="Sounds" type="Node2D" parent="."]

[node name="Bump" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 4 )

[node name="ChargeAttack" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )

[node name="ChargeAttackHit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 6 )

[node name="ShieldDamage" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )

[node name="HealthDamage" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 8 )

[node name="ChangeMode" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 9 )

[node name="DischargeParry" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )

[node name="Teleport" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 13 )

[node name="DischargeRadius" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DischargeRadius"]

[node name="CollisionSpark" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]

[node name="Weapons" type="Node2D" parent="."]
z_index = 1
[connection signal="body_entered" from="." to="." method="_on_Bot_body_entered"]
[connection signal="tween_all_completed" from="Body/SwitchTween" to="." method="_on_SwitchTween_tween_all_completed"]
[connection signal="timeout" from="Timers/ChargeTrail" to="." method="_on_ChargeTrail_timeout"]
[connection signal="timeout" from="Timers/ChargeEffectDelay" to="." method="_on_ChargeEffectDelay_timeout"]
[connection signal="timeout" from="Timers/ShieldRecoveryTimer" to="." method="_on_ShieldRecoveryTimer_timeout"]
[connection signal="timeout" from="Timers/ExplodeDelay" to="." method="_on_ExplodeDelay_timeout"]
[connection signal="timeout" from="Timers/Resume" to="." method="_on_Resume_timeout"]
